{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 21,
  "lineage": "ea1228b2-ddff-a918-869b-2b02f586f4e1",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/publicIPAddresses/vmss-public-ip"
              }
            ],
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "location": "westeurope",
            "name": "vmss-lb",
            "resource_group_name": "test-deploy",
            "sku": "Basic"
          },
          "dependencies": [
            "module.compute.azurerm_public_ip.vm-scaleset-ip",
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "name": "BackEndAddressPool",
            "resource_group_name": "test-deploy"
          },
          "dependencies": [
            "module.compute.azurerm_lb.load-balancer",
            "module.compute.azurerm_public_ip.vm-scaleset-ip",
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 3310,
            "protocol": "Tcp",
            "resource_group_name": "test-deploy"
          },
          "dependencies": [
            "module.compute.azurerm_lb.load-balancer",
            "module.compute.azurerm_public_ip.vm-scaleset-ip",
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb/backendAddressPools/BackEndAddressPool",
            "backend_port": 3310,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 3310,
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "name": "http",
            "probe_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/loadBalancers/vmss-lb/probes/ssh-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "test-deploy"
          },
          "dependencies": [
            "module.compute.azurerm_lb.load-balancer",
            "module.compute.azurerm_lb_backend_address_pool.bpepool",
            "module.compute.azurerm_lb_probe.lbprobe",
            "module.compute.azurerm_public_ip.vm-scaleset-ip",
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm-scaleset-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/publicIPAddresses/vmss-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.101.79.20",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmss-public-ip",
            "resource_group_name": "test-deploy",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/24",
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "name": "app-subnet",
            "resource_group_name": "test-deploy",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.3.0/24",
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "name": "db-subnet",
            "resource_group_name": "test-deploy",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "test-deploy",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "a9565064-71c8-4dad-a790-ed5ddab4bf81",
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01",
            "location": "westeurope",
            "name": "vnet01",
            "resource_group_name": "test-deploy",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "westeurope",
            "name": "app-nsg",
            "resource_group_name": "test-deploy",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "test-deploy",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "westeurope",
            "name": "web-nsg",
            "resource_group_name": "test-deploy",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.resourcegroup.azurerm_resource_group.test-rg",
            "module.securitygroup.azurerm_network_security_group.app-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.db-subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.resourcegroup.azurerm_resource_group.test-rg",
            "module.securitygroup.azurerm_network_security_group.db-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/XXX/resourceGroups/test-deploy/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.resourcegroup.azurerm_resource_group.test-rg",
            "module.securitygroup.azurerm_network_security_group.web-nsg"
          ]
        }
      ]
    }
  ]
}